--- a/renderers/ane/question.css
+++ b/renderers/ane/question.css
@@ -29,7 +29,26 @@
 	text-align: center;
 	border-right: 1px solid #888;
 }
+.translation-image {
+	background-color: #F8F8F8;
+	width: 100%;
+	height: 100px;
+	overflow: hidden;
+	text-align: center;
+	padding-bottom: 2px;
+}
 
+.translation-image img {
+	max-height: 100%;
+	max-width: 100%;
+	vertical-align: middle;
+	border: 1px solid #444;
+	border-radius: 2px;
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+}
 .answers {
 	margin-left: 4em;
+}
+
+.illustration {
 }
