--- a/renderers/app/question.css
+++ b/renderers/app/question.css
@@ -5,15 +5,28 @@
 .translation .foreign {
 }
 
+.translation img {
+    max-width: 200px;
+    max-height: 200px;
+}
+
 .answers {
     padding: 40px;
+    text-align: center;
 }
 
 .answers .answer {
+    display: inline-block;
     margin: 20px;
+    padding: 10px;
 
-    border: 2px solid #aaa;
+    min-width: 150px;
+
+    border: 4px solid #aaa;
     border-radius: 10px;
+
+    font-size: 22px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 
