Nav almost there

--- a/css/page.app.css
+++ b/css/page.app.css
@@ -2,6 +2,20 @@ body {
     margin: 0;
 }
 
+#nav {
+    position: absolute;
+    width: 300px;
+    padding: 15px;
+    left: 0;
+    height: 100%;
+    border-right: 1px solid #888;
+
+    background: #fff;
+
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 .question {
     width: 100%;
     background: linear-gradient(to bottom, #114C85,#11477A);
