--- a/renderers/ane/question.css
+++ b/renderers/ane/question.css
@@ -46,6 +46,31 @@
 	border-radius: 2px;
 	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
+
+.question-block .other {
+	position: relative;
+	background: #FFF;
+	padding: 0.2em;
+	padding-left: 10em;
+	border: 1px solid #888;
+}
+
+.question-block .other-key {
+	display: block;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 9em;
+
+	padding: 0.2em;
+	background-color: #EEE;
+	font-weight: bold;
+	text-align: right;
+	border-right: 1px solid #888;
+}
+
 .answers {
 	margin-left: 4em;
 }
