--- a/css/page.app.css
+++ b/css/page.app.css
@@ -2,10 +2,9 @@ body {
     margin: 0;
 }
 
-#nav {
+#navBar {
     position: absolute;
     width: 300px;
-    padding: 15px;
     left: 0;
     height: 100%;
     border-right: 1px solid #888;
@@ -14,6 +13,10 @@ body {
 
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+}
+
+#nav {
+    padding: 15px;
 }
 
 .question {
