--- a/css/page.app.css
+++ b/css/page.app.css
@@ -2,11 +2,19 @@ body {
     margin: 0;
 }
 
+#navContainer {
+    position: absolute;
+    width: 282px;
+    left: -250px;
+    height: 100%;
+}
+
 #navBar {
     position: absolute;
-    width: 300px;
+    top: 0;
     left: 0;
-    height: 100%;
+    bottom: 0;
+    width: 250px;
     border-right: 1px solid #888;
 
     background: #fff;
@@ -15,12 +23,40 @@ body {
     -webkit-overflow-scrolling: touch;
 }
 
+#navContainer .showHide {
+    position: absolute;
+    top: 100px;
+    right: 0px;
+    
+    width: 32px;
+    height: 32px;
+    background-color: #11477a;
+    border-left: none;
+    border-radius: 0 5px 5px 0;
+
+    z-index: 1;
+}
+
+#navContainer .showHide img {
+    margin: 4px;
+}
+
 #navBar .langSelect {
     margin: 2px 10px 10px;
 }
 
 #nav {
     padding: 15px;
+}
+
+#question {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .question {
@@ -35,4 +71,16 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     padding: 20px;
+}
+
+.navBottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+/* Override some jQuery Mobile stuff to shrink the nav-bar text */
+#nav .ui-btn-inner {
+    font-size: 0.8em;
 }
