--- a/css/page.app.css
+++ b/css/page.app.css
@@ -56,13 +56,12 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 40;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
 
 .question {
-    width: 100%;
     background: linear-gradient(to bottom, #114C85,#11477A);
     text-shadow: none;
     text-align: center;
@@ -75,11 +74,22 @@ body {
     padding: 20px;
 }
 
-.navBottom {
+#bottomNav {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
+    height: 40px;
+    text-align: center;
+}
+
+#bottomNav img.btn {
+    margin: 2px 10px 2px;
+}
+
+#bottomNav img.dot {
+    margin: 1px;
+    padding-bottom: 4px;
 }
 
 /* Override some jQuery Mobile stuff to shrink the nav-bar text */
